// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists: ListItem: [ prop: avatar ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: avatarContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      containerStyle={
        Object {
          "padding": 50,
        }
      }
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: avatarOverlayContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      overlayContainerStyle={
        Object {
          "padding": 25,
        }
      }
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: avatarStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      avatarStyle={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "-45deg",
            },
          ],
        }
      }
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: badge ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <Badge
      containerStyle={
        Object {
          "borderColor": "#4b5",
          "borderWidth": 2,
        }
      }
      textStyle={
        Object {
          "color": "#4b5",
        }
      }
      value="7"
    />
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: chevronColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#071"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: component ] enzyme-shallow: snapshot 1`] = `
<TouchableWithoutFeedback
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Lists: ListItem: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      Object {
        "borderWidth": 5,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: disabled ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={true}
  style={
    Array [
      81,
      undefined,
      94,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      disabled={true}
      onPress={[Function]}
      style={
        Array [
          83,
          undefined,
        ]
      }
      underlayColor="white"
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </TouchableHighlight>
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={false}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="selectable text"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: disabledStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={true}
  style={
    Array [
      81,
      undefined,
      94,
      Object {
        "borderWidth": 5,
      },
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      disabled={true}
      onPress={[Function]}
      style={
        Array [
          83,
          undefined,
        ]
      }
      underlayColor="white"
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </TouchableHighlight>
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={false}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="selectable text"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              Object {
                "fontFamily": "Courier New",
              },
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: hideChevron ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: keyboardType ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="numeric"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: label ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
    <Text>
      label
    </Text>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: leftIcon ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      disabled={false}
      style={
        Array [
          83,
          undefined,
        ]
      }
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </View>
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: leftIconOnLongPress ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      disabled={false}
      onLongPress={[Function]}
      style={
        Array [
          83,
          undefined,
        ]
      }
      underlayColor="white"
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </TouchableHighlight>
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: leftIconOnPress ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      disabled={false}
      onPress={[Function]}
      style={
        Array [
          83,
          undefined,
        ]
      }
      underlayColor="white"
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </TouchableHighlight>
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: leftIconUnderlayColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      disabled={false}
      onPress={[Function]}
      style={
        Array [
          83,
          undefined,
        ]
      }
      underlayColor="yellow"
    >
      <View>
        <Icon
          color="#071"
          iconStyle={
            Array [
              84,
              undefined,
            ]
          }
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </TouchableHighlight>
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              false,
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: no props ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: onLongPress ] enzyme-shallow: snapshot 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  disabled={false}
  onLongPress={[Function]}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</TouchableHighlight>
`;

exports[`Lists: ListItem: [ prop: onPressRightIcon ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={false}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={88}
    >
      <Icon
        color="#071"
        name="pets"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: rightIcon ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#071"
        name="pets"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: rightTitle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          undefined,
        ]
      }
    >
      <TextElement
        numberOfLines={1}
        style={
          Array [
            91,
            undefined,
          ]
        }
      >
        rightTitle
      </TextElement>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: rightTitleContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          Object {
            "borderWidth": 5,
          },
        ]
      }
    >
      <TextElement
        numberOfLines={1}
        style={
          Array [
            91,
            undefined,
          ]
        }
      >
        rightTitle
      </TextElement>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: rightTitleNumberOfLines ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          undefined,
        ]
      }
    >
      <TextElement
        numberOfLines={3}
        style={
          Array [
            91,
            undefined,
          ]
        }
      >
        line1\\nline2\\nline3
      </TextElement>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: rightTitleStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          undefined,
        ]
      }
    >
      <TextElement
        numberOfLines={1}
        style={
          Array [
            91,
            Object {
              "color": "#071",
            },
          ]
        }
      >
        rightTitle
      </TextElement>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: roundAvatar ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={true}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: subtitle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              86,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          subtitle
        </TextElement>
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: subtitleContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View
        style={
          Object {
            "borderWidth": 5,
          }
        }
      >
        <TextElement
          numberOfLines={1}
          style={
            Array [
              86,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          subtitle
        </TextElement>
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: subtitleNumberOfLines ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <TextElement
          numberOfLines={3}
          style={
            Array [
              86,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          line1\\nline2\\nline3
        </TextElement>
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: subtitleStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              86,
              Object {
                "marginLeft": 10,
              },
              Object {
                "color": "#071",
              },
              undefined,
            ]
          }
        >
          subtitle
        </TextElement>
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: switchButton ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={89}
    >
      <Switch
        activeThumbColor="#009688"
        activeTrackColor="#A3D3CF"
        disabled={false}
        onValueChange={[Function]}
        style={Object {}}
        thumbColor="#FAFAFA"
        trackColor="#939393"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: switchDisabled ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={89}
    >
      <Switch
        activeThumbColor="#009688"
        activeTrackColor="#A3D3CF"
        disabled={true}
        onValueChange={[Function]}
        style={Object {}}
        thumbColor="#FAFAFA"
        trackColor="#939393"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: switchOnTintColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={89}
    >
      <Switch
        activeThumbColor="#009688"
        activeTrackColor="#A3D3CF"
        disabled={false}
        onTintColor="#071"
        onValueChange={[Function]}
        style={Object {}}
        thumbColor="#FAFAFA"
        trackColor="#939393"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: switchThumbTintColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={89}
    >
      <Switch
        activeThumbColor="#009688"
        activeTrackColor="#A3D3CF"
        disabled={false}
        onValueChange={[Function]}
        style={Object {}}
        thumbColor="#FAFAFA"
        thumbTintColor="#071"
        trackColor="#939393"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: switchTintColor ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={89}
    >
      <Switch
        activeThumbColor="#009688"
        activeTrackColor="#A3D3CF"
        disabled={false}
        onValueChange={[Function]}
        style={Object {}}
        thumbColor="#FAFAFA"
        tintColor="#071"
        trackColor="#939393"
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInput ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputAutoCapitalize ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="characters"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputAutoCorrect ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          Object {
            "borderWidth": 5,
          },
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputEditable & textInputValue ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={false}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="example text"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputMaxLength ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        maxLength={7}
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputMultiline ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={true}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputOnBlur ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        onBlur={[Function]}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputOnChangeText ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        onChangeText={[Function]}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputOnFocus ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        onFocus={[Function]}
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputPlaceholder ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        placeholder="placeholder"
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputReturnKeyType ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        returnKeyType="go"
        secureTextEntry={false}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="selectable text"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputSecure ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        onChangeText={[Function]}
        secureTextEntry={true}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputSelectTextOnFocus ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            93,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value="selectable text"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: textInputStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          90,
          92,
          undefined,
        ]
      }
    >
      <TextInput
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect={true}
        editable={true}
        keyboardType="default"
        multiline={false}
        numberOfLines={2}
        secureTextEntry={false}
        style={
          Array [
            93,
            Object {
              "color": "#071",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: titleContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View
        style={
          Object {
            "borderWidth": 5,
          }
        }
      >
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: titleNumberOfLines ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={3}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          line1\\nline2\\nline3
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: titleStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "hero.jpg",
        }
      }
    />
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              Object {
                "marginTop": -25,
              },
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Lists: ListItem: [ prop: underlayColor & onPress ] enzyme-shallow: snapshot 1`] = `
<TouchableHighlight
  activeOpacity={0.85}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
  underlayColor="yellow"
>
  <View
    style={
      Array [
        82,
        undefined,
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</TouchableHighlight>
`;

exports[`Lists: ListItem: [ prop: wrapperStyle ] enzyme-shallow: snapshot 1`] = `
<View
  disabled={false}
  style={
    Array [
      81,
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      Array [
        82,
        Object {
          "borderWidth": 5,
        },
      ]
    }
  >
    <View
      style={87}
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              85,
              Object {
                "marginLeft": 10,
              },
              undefined,
              undefined,
            ]
          }
        >
          Title
        </TextElement>
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={88}
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;
